[gd_scene load_steps=2 format=3 uid="uid://rv3rt55scf8j"]

[ext_resource type="Script" path="res://addons/talk_tree/Graph Nodes/dialogue_graph_node.gd" id="1_1m1t4"]

[node name="GraphNode" type="GraphNode"]
offset_right = 292.0
offset_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
resizable = true
title = "Dialogue"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_1m1t4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
wrap_mode = 1
autowrap_mode = 1

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="is_top" type="CheckBox" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "^"

[node name="SpinBox" type="SpinBox" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 2

[connection signal="toggled" from="HBoxContainer/is_top" to="." method="_on_is_top_toggled"]
[connection signal="value_changed" from="HBoxContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
